dev-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: communicator-dev
  name: channels
  labels:
    purpose: dev
    app: channels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: channels

  template:
    metadata:
      labels:
        app: channels

    spec:
      serviceAccountName: channels
      containers:
        - name: channels
          image: channels
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: communicator-dev
  name: channels
  labels:
    app: channels
    service: channels
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: channels

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: channels-ingress
  namespace: communicator-dev
  annotations:
    konghq.com/plugins: jwt,communicator-dev-cors
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /channels
            pathType: ImplementationSpecific
            backend:
              service:
                name: channels
                port:
                  number: 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: communicator-dev
  name: channels
spec:
  hosts:
    - channels
  http:
    - route:
        - destination:
            host: channels
      # retries:
      #   attempts: 3
      #   perTryTimeout: 2s
      #   retryOn: connect-failure,refused-stream,503
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: communicator-dev
  name: channels
spec:
  host: channels
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: deny-path-from-outside
#   namespace: communicator-dev
# spec:
#   selector:
#     matchLabels:
#       app: channels
#   action: DENY
#   rules:
#     - from:
#         - source:
#             notPrincipals:
#               - "cluster.local/ns/communicator-dev/sa/auth-hooks-service"
#       to:
#         - operation:
#             paths: ["/users/create/account"]

#     - from:
#         - source:
#             notPrincipals:
#               - "cluster.local/ns/communicator-dev/sa/server-management-service"
#       to:
#         - operation:
#             paths: ["/users/data/*"]
